--- a/text_try-Bert.ipynb
+++ b/text_try-Bert.ipynb
@@ -9,24 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sinarollin/opt/anaconda3/envs/DLproj/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "The cache for model files in Transformers v4.22.0 has been updated. Migrating your old cache. This is a one-time only operation. You can interrupt this and resume the migration later on by calling `transformers.utils.move_cache()`.\n",
-      "0it [00:00, ?it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from transformers import BertTokenizer\n",
     "from torch.utils.data import Dataset, DataLoader\n",
+    "import json\n",
     "\n",
     "# Load the BERT tokenizer\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
@@ -45,26 +35,36 @@
     "\n",
     "# PyTorch Dataset\n",
     "class SarcasmDataset(Dataset):\n",
-    "    def __init__(self, filename):\n",
-    "        with open(filename, 'r') as file:\n",
-    "            self.lines = file.read().splitlines()\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.lines)\n",
+    "        return len(self.data)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        line = self.lines[idx]\n",
-    "        input_ids, attention_mask = encode_text(line)\n",
-    "        return input_ids, attention_mask\n",
+    "        item = self.data[idx]\n",
+    "        utterance = item['utterance']\n",
+    "        sarcasm = int(item['sarcasm'])\n",
+    "        input_ids, attention_mask = encode_text(utterance)\n",
+    "        return input_ids, attention_mask, sarcasm\n",
     "\n",
     "# Create the DataLoader\n",
-    "dataset = SarcasmDataset('bert-input.txt')\n",
-    "dataloader = DataLoader(dataset, batch_size=32)"
+    "# Load the data from the JSON file\n",
+    "with open('sarcasm_data.json') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Convert the data to a list of dictionaries\n",
+    "data = list(data.values())\n",
+    "\n",
+    "dataset = SarcasmDataset(data)\n",
+    "dataloader = DataLoader(dataset, batch_size=32)\n",
+    "#dataset = SarcasmDataset('sarcasm_data.json')\n",
+    "#dataloader = DataLoader(dataset, batch_size=32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -73,25 +73,98 @@
      "text": [
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "/Users/sinarollin/opt/anaconda3/envs/DLproj/lib/python3.11/site-packages/transformers/optimization.py:457: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n"
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'epochs' is not defined",
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m AdamW(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2e-5\u001b[39m)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Training loop\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[43mepochs\u001b[49m):\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m dataloader:\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;66;03m# Move batch to CPU\u001b[39;00m\n\u001b[1;32m     22\u001b[0m         batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(t\u001b[38;5;241m.\u001b[39mto(device) \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m batch)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'epochs' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epochs):\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m dataloader:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;66;03m# Move batch to CPU\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m         input_ids \u001b[38;5;241m=\u001b[39m \u001b[43mbatch\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43minput_ids\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     31\u001b[0m         attention_mask \u001b[38;5;241m=\u001b[39m batch[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mattention_mask\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     32\u001b[0m         labels \u001b[38;5;241m=\u001b[39m batch[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mto(device)\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
      ]
     }
    ],
    "source": [
-    "# Set device to CPU\n",
+    "from transformers import BertForSequenceClassification, AdamW, BertTokenizer\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "# Load BERT model\n",
+    "model = BertForSequenceClassification.from_pretrained(\n",
+    "    \"bert-base-uncased\", # Use the base BERT model\n",
+    "    num_labels = 2, # Binary classification (sarcasm or not)\n",
+    "    output_attentions = False, # Whether the model returns attentions weights\n",
+    "    output_hidden_states = False, # Whether the model returns all hidden-states\n",
+    ")\n",
+    "\n",
+    "# Load the BERT tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
+    "\n",
+    "\n",
+    "# Set device\n",
     "device = torch.device(\"cpu\")\n",
+    "\n",
+    "# Move the model to the CPU\n",
+    "model.to(device)\n",
+    "\n",
+    "# Create the optimizer\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
+    "\n",
+    "# Training loop\n",
+    "epochs = 5\n",
+    "for epoch in range(epochs):\n",
+    "    for batch in dataloader:\n",
+    "        # Move batch to CPU\n",
+    "        input_ids = batch['input_ids'].to(device)\n",
+    "        attention_mask = batch['attention_mask'].to(device)\n",
+    "        labels = batch['labels'].to(device)\n",
+    "\n",
+    "        # Clear out the gradients (by default they accumulate)\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Forward pass\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "\n",
+    "        # Get the loss from the outputs\n",
+    "        loss = outputs.loss\n",
+    "\n",
+    "        # Backward pass\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # Update parameters and take a step using the computed gradient\n",
+    "        optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(t\u001b[38;5;241m.\u001b[39mto(device) \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m batch)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Unpack the inputs from our dataloader\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m b_input_ids, b_input_mask \u001b[38;5;241m=\u001b[39m batch\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Clear out the gradients (by default they accumulate)\u001b[39;00m\n\u001b[1;32m     32\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BertForSequenceClassification, AdamW\n",
     "\n",
     "# Load BERT model\n",
     "model = BertForSequenceClassification.from_pretrained(\n",
@@ -100,6 +173,77 @@
     "    output_attentions = False, # Whether the model returns attentions weights\n",
     "    output_hidden_states = False, # Whether the model returns all hidden-states\n",
     ")\n",
+    "\n",
+    "#CPU\n",
+    "device = torch.device(\"cpu\")\n",
+    "\n",
+    "# Move the model to the CPU\n",
+    "model.to(device)\n",
+    "\n",
+    "# Create the optimizer\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
+    "\n",
+    "\n",
+    "epochs = 5 \n",
+    "# Training loop\n",
+    "for epoch in range(epochs):\n",
+    "    for batch in dataloader:\n",
+    "        # Move batch to CPU\n",
+    "        batch = tuple(t.to(device) for t in batch)\n",
+    "        \n",
+    "        # Unpack the inputs from our dataloader\n",
+    "        b_input_ids, b_input_mask = batch\n",
+    "        \n",
+    "        # Clear out the gradients (by default they accumulate)\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Forward pass\n",
+    "       # Forward pass\n",
+    "        #outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask)\n",
+    "        # Forward pass\n",
+    "        b_input_ids = b_input_ids.unsqueeze(0)  # Add batch dimension\n",
+    "        b_input_mask = b_input_mask.unsqueeze(0)  # Add batch dimension\n",
+    "        outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask)\n",
+    "                #loss = outputs[0]\n",
+    "        # Unpack the outputs\n",
+    "        loss, logits = outputs.loss, outputs.logits\n",
+    "\n",
+    "        # Backward pass\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # Update parameters and take a step using the computed gradient\n",
+    "        optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BertTokenizer' object has no attribute 'to'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbert-base-uncased\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;66;03m# Use the base BERT model\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     num_labels \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m, \u001b[38;5;66;03m# Binary classification (sarcasm or not)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     output_attentions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;66;03m# Whether the model returns attentions weights\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     output_hidden_states \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;66;03m# Whether the model returns all hidden-states\u001b[39;00m\n\u001b[1;32m     10\u001b[0m )\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Move the model to the CPU\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m(device)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Create the optimizer\u001b[39;00m\n\u001b[1;32m     16\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m AdamW(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2e-5\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'BertTokenizer' object has no attribute 'to'"
+     ]
+    }
+   ],
+   "source": [
+    "# Set device to CPU\n",
+    "device = torch.device(\"cpu\")\n",
+    "\n",
+    "# Load BERT model\n",
+    "model = tokenizer.from_pretrained(\n",
+    "    \"bert-base-uncased\", # Use the base BERT model\n",
+    "    num_labels = 2, # Binary classification (sarcasm or not)\n",
+    "    output_attentions = False, # Whether the model returns attentions weights\n",
+    "    output_hidden_states = False, # Whether the model returns all hidden-states\n",
+    ")\n",
+    "\n",
     "\n",
     "# Move the model to the CPU\n",
     "model.to(device)\n",
