bert tryouts first model

--- a/text_try-Bert.ipynb
+++ b/text_try-Bert.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from transformers import BertTokenizer\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import json\n",
+    "import numpy as np\n",
     "\n",
     "# Load the BERT tokenizer\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
@@ -133,151 +134,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(t\u001b[38;5;241m.\u001b[39mto(device) \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m batch)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Unpack the inputs from our dataloader\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m b_input_ids, b_input_mask \u001b[38;5;241m=\u001b[39m batch\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Clear out the gradients (by default they accumulate)\u001b[39;00m\n\u001b[1;32m     32\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.863768115942029\n"
      ]
     }
    ],
    "source": [
-    "from transformers import BertForSequenceClassification, AdamW\n",
+    "# Put the model in evaluation mode\n",
+    "model.eval()\n",
     "\n",
-    "# Load BERT model\n",
-    "model = BertForSequenceClassification.from_pretrained(\n",
-    "    \"bert-base-uncased\", # Use the base BERT model\n",
-    "    num_labels = 2, # Binary classification (sarcasm or not)\n",
-    "    output_attentions = False, # Whether the model returns attentions weights\n",
-    "    output_hidden_states = False, # Whether the model returns all hidden-states\n",
-    ")\n",
+    "# Variables to keep track of predictions and true labels\n",
+    "total_preds, total_labels = [], []\n",
     "\n",
-    "#CPU\n",
-    "device = torch.device(\"cpu\")\n",
-    "\n",
-    "# Move the model to the CPU\n",
-    "model.to(device)\n",
-    "\n",
-    "# Create the optimizer\n",
-    "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
-    "\n",
-    "\n",
-    "epochs = 5 \n",
-    "# Training loop\n",
-    "for epoch in range(epochs):\n",
+    "# Evaluation loop\n",
+    "with torch.no_grad():\n",
     "    for batch in dataloader:\n",
-    "        # Move batch to CPU\n",
-    "        batch = tuple(t.to(device) for t in batch)\n",
-    "        \n",
-    "        # Unpack the inputs from our dataloader\n",
-    "        b_input_ids, b_input_mask = batch\n",
-    "        \n",
-    "        # Clear out the gradients (by default they accumulate)\n",
-    "        optimizer.zero_grad()\n",
+    "        # Move batch to device\n",
+    "        input_ids = batch[0].to(device)\n",
+    "        attention_mask = batch[1].to(device)\n",
+    "        labels = batch[2].to(device)\n",
     "\n",
     "        # Forward pass\n",
-    "       # Forward pass\n",
-    "        #outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask)\n",
-    "        # Forward pass\n",
-    "        b_input_ids = b_input_ids.unsqueeze(0)  # Add batch dimension\n",
-    "        b_input_mask = b_input_mask.unsqueeze(0)  # Add batch dimension\n",
-    "        outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask)\n",
-    "                #loss = outputs[0]\n",
-    "        # Unpack the outputs\n",
-    "        loss, logits = outputs.loss, outputs.logits\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask)\n",
     "\n",
-    "        # Backward pass\n",
-    "        loss.backward()\n",
+    "        # Get the predictions\n",
+    "        preds = torch.argmax(outputs.logits, dim=1)\n",
     "\n",
-    "        # Update parameters and take a step using the computed gradient\n",
-    "        optimizer.step()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'BertTokenizer' object has no attribute 'to'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbert-base-uncased\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;66;03m# Use the base BERT model\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     num_labels \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m, \u001b[38;5;66;03m# Binary classification (sarcasm or not)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     output_attentions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;66;03m# Whether the model returns attentions weights\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     output_hidden_states \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;66;03m# Whether the model returns all hidden-states\u001b[39;00m\n\u001b[1;32m     10\u001b[0m )\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Move the model to the CPU\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m(device)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Create the optimizer\u001b[39;00m\n\u001b[1;32m     16\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m AdamW(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2e-5\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'BertTokenizer' object has no attribute 'to'"
-     ]
-    }
-   ],
-   "source": [
-    "# Set device to CPU\n",
-    "device = torch.device(\"cpu\")\n",
+    "        # Add the predictions and the true labels to the total\n",
+    "        total_preds.extend(preds.cpu().numpy())\n",
+    "        total_labels.extend(labels.cpu().numpy())\n",
     "\n",
-    "# Load BERT model\n",
-    "model = tokenizer.from_pretrained(\n",
-    "    \"bert-base-uncased\", # Use the base BERT model\n",
-    "    num_labels = 2, # Binary classification (sarcasm or not)\n",
-    "    output_attentions = False, # Whether the model returns attentions weights\n",
-    "    output_hidden_states = False, # Whether the model returns all hidden-states\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# Move the model to the CPU\n",
-    "model.to(device)\n",
-    "\n",
-    "# Create the optimizer\n",
-    "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
-    "\n",
-    "# Training loop\n",
-    "for epoch in range(epochs):\n",
-    "    for batch in dataloader:\n",
-    "        # Move batch to CPU\n",
-    "        batch = tuple(t.to(device) for t in batch)\n",
-    "        \n",
-    "        # Unpack the inputs from our dataloader\n",
-    "        b_input_ids, b_input_mask = batch\n",
-    "        \n",
-    "        # Clear out the gradients (by default they accumulate)\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        # Forward pass\n",
-    "        outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask)\n",
-    "        loss = outputs[0]\n",
-    "\n",
-    "        # Backward pass\n",
-    "        loss.backward()\n",
-    "\n",
-    "        # Update parameters and take a step using the computed gradient\n",
-    "        optimizer.step()\n",
-    "\n",
-    "# Evaluation\n",
-    "# You would also need to create a validation dataloader\n",
-    "for batch in validation_dataloader:\n",
-    "    # Unpack the inputs from our dataloader\n",
-    "    b_input_ids, b_input_mask = batch\n",
-    "\n",
-    "    # Forward pass\n",
-    "    outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask)\n",
-    "    logits = outputs[0]\n",
-    "\n",
-    "    # Compute the prediction\n",
-    "    _, prediction = torch.max(logits, dim=1)"
+    "# Compute the accuracy\n",
+    "accuracy = (np.array(total_preds) == np.array(total_labels)).mean()\n",
+    "print(f'Test Accuracy: {accuracy}')"
    ]
   },
   {
