--- a/data_labelling.ipynb
+++ b/data_labelling.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c53b5ac2-d590-4dfe-b575-f0f24dcc2ce9",
    "metadata": {
     "execution": {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2d5e3a8b-db47-41fc-96c8-f36f7749c2ba",
    "metadata": {
     "execution": {
@@ -162,7 +162,7 @@
        "1105  [SHELDON, LEONARD, SHELDON, SHELDON, SHELDON, ...  BBT    True  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0efa3c46-e28d-4eb3-8a31-a28299452bf8",
    "metadata": {
     "execution": {
@@ -192,7 +192,7 @@
        "(690, 6)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6a2c58f9-39e9-4529-82b3-535523e8524e",
    "metadata": {
     "execution": {
@@ -225,7 +225,7 @@
        "       'MEMBER-GIRL', 'MODERATOR', 'MEMBER-BOY'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "bd2ba2da-0108-4c1f-ac91-3c7cea027266",
    "metadata": {
     "execution": {
@@ -266,7 +266,7 @@
        "Name: speaker, Length: 690, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f60ee3e2-d144-4011-a289-c49233cf9e66",
    "metadata": {
     "execution": {
@@ -305,7 +305,7 @@
        "(633, 6)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "31162013-903e-4a50-b751-5dd3b08b4d43",
    "metadata": {
     "execution": {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "0d4194ea-16c7-4d18-8410-6170ced11208",
    "metadata": {
     "execution": {
@@ -488,7 +488,7 @@
        "1105  [SHELDON, LEONARD, SHELDON, SHELDON, SHELDON, ...  BBT    True      M  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,11 +499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "067c81bc-2e1f-4e8e-adf6-3ade676cf04c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the filtered data to a CSV file\n",
+    "df_filtered.to_csv('sarcasm_data.csv', index=False) "
+   ]
   }
  ],
  "metadata": {
@@ -522,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
