--- a/Tryouts/text_try-Bert.ipynb
+++ b/Tryouts/text_try-Bert.ipynb
@@ -9,7 +9,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sinarollin/opt/anaconda3/envs/DLproj/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import BertTokenizer\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import json\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.metrics import f1_score, accuracy_score\n",
+    "from transformers import BertForSequenceClassification, BertTokenizer\n",
+    "from torch.optim import AdamW\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch.nn as nn\n",
+    "from functions_text_model import acc, f1\n",
+    "\n",
+    "# Load the BERT tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
+    "\n",
+    "# Function to encode the text\n",
+    "def encode_text(text):\n",
+    "    encoded_dict = tokenizer.encode_plus(\n",
+    "                        text,                      # Input text\n",
+    "                        add_special_tokens = True, # Add '[CLS]' and '[SEP]'\n",
+    "                        max_length = 64,           # Pad & truncate all sentences\n",
+    "                        truncation = True,\n",
+    "                        padding = 'max_length',\n",
+    "                        return_attention_mask = True,   # Construct attention masks\n",
+    "                        return_tensors = 'pt',     # Return pytorch tensors\n",
+    "                   )\n",
+    "    return encoded_dict['input_ids'], encoded_dict['attention_mask']\n",
+    "\n",
+    "# PyTorch Dataset\n",
+    "class SarcasmDataset(Dataset):\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        item = self.data[idx]\n",
+    "        utterance = item['utterance']\n",
+    "        sarcasm = int(item['sarcasm'])\n",
+    "        input_ids, attention_mask = encode_text(utterance)\n",
+    "        return input_ids.flatten(), attention_mask.flatten(), sarcasm\n",
+    "# Create the DataLoader\n",
+    "# Load the data from the JSON file\n",
+    "with open('sarcasm_data.json') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Convert the data to a list of dictionaries\n",
+    "data = list(data.values())\n",
+    "\n",
+    "dataset = SarcasmDataset(data)\n",
+    "dataloader = DataLoader(dataset, batch_size=32)\n",
+    "#dataset = SarcasmDataset('sarcasm_data.json')\n",
+    "#dataloader = DataLoader(dataset, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the evaluate function\n",
+    "def evaluate(model, dataloader, device):\n",
+    "    \n",
+    "    model.eval()  # Put the model in evaluation mode\n",
+    "\n",
+    "    epoch_loss = 0\n",
+    "    epoch_preds = []\n",
+    "    epoch_labels = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for batch in tqdm(dataloader):\n",
+    "            # Move batch to device\n",
+    "            input_ids = batch[0].to(device)\n",
+    "            attention_mask = batch[1].to(device)\n",
+    "            labels = batch[2].to(device)\n",
+    "\n",
+    "            # Forward pass\n",
+    "            outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "\n",
+    "            # Get the loss and logits from the outputs\n",
+    "            loss = outputs.loss\n",
+    "            logits = outputs.logits\n",
+    "\n",
+    "            # Add the loss to the epoch loss\n",
+    "            epoch_loss += loss.item()\n",
+    "\n",
+    "            # Get the predictions\n",
+    "            preds = torch.argmax(logits, dim=1)\n",
+    "\n",
+    "            # Add the predictions and labels to the epoch predictions and labels\n",
+    "            epoch_preds.extend(preds.cpu().numpy())\n",
+    "            epoch_labels.extend(labels.cpu().numpy())\n",
+    "\n",
+    "    # Compute the metrics\n",
+    "    loss = epoch_loss / len(dataloader)\n",
+    "    accuracy = accuracy_score(epoch_labels, epoch_preds)\n",
+    "    f1 = f1_score(epoch_labels, epoch_preds, average='weighted')\n",
+    "\n",
+    "    return loss, accuracy, f1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch(model, optimizer, criterion, dataloader, device):\n",
+    "    \"\"\"This function trains the model for one epoch and returns the average loss.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    model: torch model\n",
+    "        The model to train.\n",
+    "    optimizer: torch optimizer\n",
+    "        The optimizer to use for training.\n",
+    "    criterion: torch loss\n",
+    "        The loss function to use for training.\n",
+    "    dataloader: torch dataloader\n",
+    "        The dataloader to train the model on.\n",
+    "    device: str\n",
+    "        The device to use for the training.\n",
+    "        \n",
+    "    Returns:\n",
+    "    -------\n",
+    "    epoch_loss: float\n",
+    "        The average loss over the epoch.\"\"\"\n",
+    "\n",
+    "    model.train()  # Put the model in training mode\n",
+    "    epoch_loss = 0\n",
+    "\n",
+    "    for batch in tqdm(dataloader):\n",
+    "        # Move the batch to the GPU\n",
+    "        input_ids = batch[0].to(device)\n",
+    "        attention_mask = batch[1].to(device)\n",
+    "        labels = batch[2].to(device)\n",
+    "\n",
+    "        # Forward pass\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "\n",
+    "        # Compute the loss\n",
+    "        loss = criterion(outputs.logits, labels)\n",
+    "\n",
+    "        # Backward pass\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # Update the weights\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # Zero the gradients\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Add the loss to the epoch loss\n",
+    "        epoch_loss += loss.item()\n",
+    "\n",
+    "    # Compute the average loss\n",
+    "    epoch_loss /= len(dataloader)\n",
+    "\n",
+    "    return epoch_loss\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "100%|██████████| 18/18 [03:45<00:00, 12.55s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5 - Train Loss: 0.7117744617991977\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:19<00:00,  3.93s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5 - Eval Loss: 0.7159899592399597 - Metrics: 0.4782608695652174\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 18/18 [07:44<00:00, 25.81s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/5 - Train Loss: 0.6512950460116068\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:15<00:00,  3.06s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/5 - Eval Loss: 0.6561400413513183 - Metrics: 0.6231884057971014\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 18/18 [02:56<00:00,  9.79s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/5 - Train Loss: 0.5971288548575507\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:10<00:00,  2.10s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/5 - Eval Loss: 0.6774665355682373 - Metrics: 0.6014492753623188\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 18/18 [10:56<00:00, 36.46s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/5 - Train Loss: 0.4831409172879325\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:12<00:00,  2.57s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/5 - Eval Loss: 0.7269841194152832 - Metrics: 0.6086956521739131\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 18/18 [03:05<00:00, 10.33s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/5 - Train Loss: 0.4051706973049376\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:11<00:00,  2.26s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/5 - Eval Loss: 0.7923229336738586 - Metrics: 0.6014492753623188\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the number of epochs\n",
+    "N_EPOCHS = 5\n",
+    "# Load BERT model\n",
+    "model = BertForSequenceClassification.from_pretrained(\n",
+    "    \"bert-base-uncased\", # Use the base BERT model\n",
+    "    num_labels = 2, # Binary classification (sarcasm or not)\n",
+    "    output_attentions = False, # Whether the model returns attentions weights\n",
+    "    output_hidden_states = False, # Whether the model returns all hidden-states\n",
+    ")\n",
+    "\n",
+    "# Load the BERT tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
+    "\n",
+    "# Set device\n",
+    "device = torch.device(\"cpu\")\n",
+    "\n",
+    "# Move the model to the CPU\n",
+    "model.to(device)\n",
+    "\n",
+    "# Create the optimizer\n",
+    "optimizer = AdamW(model.parameters(), lr=1e-5)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "metrics = {'ACC': acc, 'F1-weighted': f1}\n",
+    "\n",
+    "#splitting into test and dataset\n",
+    "\n",
+    "from torch.utils.data import random_split\n",
+    "\n",
+    "# Define the size of the training set and the test set\n",
+    "train_size = int(0.8 * len(dataset))  # 80% of the data for training\n",
+    "test_size = len(dataset) - train_size  # 20% of the data for testing\n",
+    "\n",
+    "# Split the dataset\n",
+    "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+    "\n",
+    "# Create the DataLoaders\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=32)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=32)\n",
+    "\n",
+    "# Train and evaluate the model\n",
+    "for epoch in range(N_EPOCHS):\n",
+    "    # Train the model for one epoch\n",
+    "    train_loss = train_epoch(model, optimizer, criterion, train_dataloader, device)\n",
+    "    print(f\"Epoch {epoch+1}/{N_EPOCHS} - Train Loss: {train_loss}\")\n",
+    "\n",
+    "    # Evaluate the model\n",
+    "    eval_loss, eval_metrics_acc, eval_f1 = evaluate(model, test_dataloader, device)\n",
+    "    print(f\"Epoch {epoch+1}/{N_EPOCHS} - Eval Loss: {eval_loss} - Metrics: {eval_metrics_acc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +438,7 @@
     "from torch.optim import AdamW\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import matplotlib.pyplot as plt\n",
+    "import torch.nn as nn\n",
     "\n",
     "\n",
     "# Load the BERT tokenizer\n",
@@ -72,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
