functions refinement and hyperparameter_tuning with gpu and without

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sinarollin/opt/anaconda3/envs/DLproj/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from transformers import BertTokenizer\n",
@@ -36,7 +45,6 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import random_split\n",
     "from sklearn.model_selection import ParameterGrid\n",
-    "\n",
     "\n",
     "\n",
     "# Load the BERT tokenizer\n",
@@ -82,9 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 9\u001b[0m\n\u001b[1;32m      2\u001b[0m param_grid \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m1e-3\u001b[39m, \u001b[38;5;241m1e-4\u001b[39m, \u001b[38;5;241m1e-5\u001b[39m],\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_epochs\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m15\u001b[39m],\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m16\u001b[39m, \u001b[38;5;241m32\u001b[39m, \u001b[38;5;241m64\u001b[39m]\n\u001b[1;32m      6\u001b[0m }\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Set device\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m device \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Create a parameter grid\u001b[39;00m\n\u001b[1;32m     12\u001b[0m grid \u001b[38;5;241m=\u001b[39m ParameterGrid(param_grid)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Define the hyperparameters to tune\n",
     "param_grid = {\n",
@@ -117,10 +137,17 @@
     "    criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "    metrics = {'ACC': acc, 'F1-weighted': f1}\n",
+    "    # Define the size of the training set and the test set\n",
+    "    train_size = int(0.8 * len(dataset))  # 80% of the data for training\n",
+    "    test_size = len(dataset) - train_size  # 20% of the data for testing\n",
     "\n",
-    "    # Create new dataloaders with the current batch size\n",
+    "    # Split the dataset\n",
+    "    train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+    "\n",
+    "    # Create the DataLoaders\n",
     "    train_dataloader = DataLoader(train_dataset, batch_size=params['batch_size'])\n",
     "    test_dataloader = DataLoader(test_dataset, batch_size=params['batch_size'])\n",
+    "\n",
     "\n",
     "    # Train and evaluate the model for the current number of epochs\n",
     "    for epoch in range(params['num_epochs']):\n",
@@ -133,10 +160,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# Define the hyperparameters to tune\n",
+    "param_grid = {\n",
+    "    'lr': [1e-3, 1e-4, 1e-5],\n",
+    "    'num_epochs': [5],\n",
+    "    'batch_size': [8, 16, 32, 64]\n",
+    "}\n",
+    "\n",
+    "# Set device\n",
+    "device = torch.device(\"cpu\")\n",
+    "\n",
+    "# Create a parameter grid\n",
+    "grid = ParameterGrid(param_grid)\n",
+    "\n",
+    "# Initialize a list to store the results\n",
+    "results = []\n",
+    "\n",
+    "# For each combination of hyperparameters\n",
+    "for params in grid:\n",
+    "    # Create a new model\n",
+    "    model = BertForSequenceClassification.from_pretrained(\n",
+    "        \"bert-base-uncased\",\n",
+    "        num_labels = 2,\n",
+    "        output_attentions = False,\n",
+    "        output_hidden_states = False,\n",
+    "    )\n",
+    "\n",
+    "    model.to(device)\n",
+    "\n",
+    "    # Create a new optimizer with the current learning rate\n",
+    "    optimizer = AdamW(model.parameters(), lr=params['lr'])\n",
+    "    # Create the optimizer  \n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    metrics = {'ACC': acc, 'F1-weighted': f1}\n",
+    "    # Define the size of the training set and the test set\n",
+    "    train_size = int(0.8 * len(dataset))  # 80% of the data for training\n",
+    "    test_size = len(dataset) - train_size  # 20% of the data for testing\n",
+    "\n",
+    "    # Split the dataset\n",
+    "    train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+    "\n",
+    "    # Create the DataLoaders\n",
+    "    train_dataloader = DataLoader(train_dataset, batch_size=params['batch_size'])\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=params['batch_size'])\n",
+    "\n",
+    "\n",
+    "    # Train and evaluate the model for the current number of epochs\n",
+    "    for epoch in range(params['num_epochs']):\n",
+    "        train_loss, train_metrics = train_epoch(model, optimizer, criterion, metrics, train_dataloader, device)\n",
+    "        eval_loss, eval_metrics = evaluate(model, criterion, metrics, test_dataloader, device)\n",
+    "\n",
+    "    # Store the results\n",
+    "    results.append({\n",
+    "        'lr': params['lr'],\n",
+    "        'batch_size': params['batch_size'],\n",
+    "        'num_epochs': params['num_epochs'],\n",
+    "        'eval_loss': eval_loss,\n",
+    "        'eval_metrics': eval_metrics\n",
+    "    })\n",
+    "\n",
+    "# Save the results to a JSON file\n",
+    "with open('results.json', 'w') as f:\n",
+    "    json.dump(results, f)\n",
+    "\n",
+    "print(results)"
+   ]
   },
   {
    "cell_type": "code",
