--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sinarollin/opt/anaconda3/envs/DLproj/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/sinarollin/opt/anaconda3/envs/DLPROJ/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -90,18 +90,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 9\u001b[0m\n\u001b[1;32m      2\u001b[0m param_grid \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m1e-3\u001b[39m, \u001b[38;5;241m1e-4\u001b[39m, \u001b[38;5;241m1e-5\u001b[39m],\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_epochs\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m15\u001b[39m],\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m16\u001b[39m, \u001b[38;5;241m32\u001b[39m, \u001b[38;5;241m64\u001b[39m]\n\u001b[1;32m      6\u001b[0m }\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Set device\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m device \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Create a parameter grid\u001b[39;00m\n\u001b[1;32m     12\u001b[0m grid \u001b[38;5;241m=\u001b[39m ParameterGrid(param_grid)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -114,7 +122,7 @@
     "}\n",
     "\n",
     "# Set device\n",
-    "device = torch.device(\"cpu\")\n",
+    "#device = torch.device(\"cpu\")\n",
     "\n",
     "# Create a parameter grid\n",
     "grid = ParameterGrid(param_grid)\n",
@@ -128,8 +136,9 @@
     "        output_attentions = False,\n",
     "        output_hidden_states = False,\n",
     "    )\n",
+    "    model.bert.parameters.requires_grad = False\n",
     "\n",
-    "    model.to(device)\n",
+    "    #model.to(device)\n",
     "\n",
     "    # Create a new optimizer with the current learning rate\n",
     "    optimizer = AdamW(model.parameters(), lr=params['lr'])\n",
@@ -160,26 +169,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train Loss: 0.6928,  ACC: 0.5215, F1-weighted: 0.4583\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+      "100%|██████████| 3/3 [00:13<00:00,  4.47s/it]\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eval Loss: 0.6984,  ACC: 0.4844, F1-weighted: 0.3486\n",
+      "[{'lr': 0.001, 'batch_size': 8, 'num_epochs': 5, 'eval_loss': 0.6320563554763794, 'eval_metrics': {'ACC': 0.6319444444444444, 'F1-weighted': 0.49410589410589423}}, {'lr': 0.0001, 'batch_size': 8, 'num_epochs': 5, 'eval_loss': 0.6813187963432736, 'eval_metrics': {'ACC': 0.6041666666666666, 'F1-weighted': 0.5322923989590657}}, {'lr': 1e-05, 'batch_size': 8, 'num_epochs': 5, 'eval_loss': 0.6862524151802063, 'eval_metrics': {'ACC': 0.5486111111111112, 'F1-weighted': 0.48931284764618105}}, {'lr': 0.001, 'batch_size': 16, 'num_epochs': 5, 'eval_loss': 0.7095533344480727, 'eval_metrics': {'ACC': 0.5416666666666666, 'F1-weighted': 0.5298845862313354}}, {'lr': 0.0001, 'batch_size': 16, 'num_epochs': 5, 'eval_loss': 0.6883872614966499, 'eval_metrics': {'ACC': 0.5388888888888889, 'F1-weighted': 0.44173358847271893}}, {'lr': 1e-05, 'batch_size': 16, 'num_epochs': 5, 'eval_loss': 0.7074771987067329, 'eval_metrics': {'ACC': 0.45694444444444443, 'F1-weighted': 0.35963553165599205}}, {'lr': 0.001, 'batch_size': 32, 'num_epochs': 5, 'eval_loss': 0.6715264320373535, 'eval_metrics': {'ACC': 0.5825, 'F1-weighted': 0.40649434319182215}}, {'lr': 0.0001, 'batch_size': 32, 'num_epochs': 5, 'eval_loss': 0.7022266864776612, 'eval_metrics': {'ACC': 0.44375, 'F1-weighted': 0.39618692607027706}}, {'lr': 1e-05, 'batch_size': 32, 'num_epochs': 5, 'eval_loss': 0.6897956013679505, 'eval_metrics': {'ACC': 0.53125, 'F1-weighted': 0.4975698673128294}}, {'lr': 0.001, 'batch_size': 64, 'num_epochs': 5, 'eval_loss': 0.6729104518890381, 'eval_metrics': {'ACC': 0.603125, 'F1-weighted': 0.5666506805784625}}, {'lr': 0.0001, 'batch_size': 64, 'num_epochs': 5, 'eval_loss': 0.6901440620422363, 'eval_metrics': {'ACC': 0.515625, 'F1-weighted': 0.4408191504081915}}, {'lr': 1e-05, 'batch_size': 64, 'num_epochs': 5, 'eval_loss': 0.6984360416730245, 'eval_metrics': {'ACC': 0.484375, 'F1-weighted': 0.34864433811802237}}]\n"
      ]
     }
    ],
@@ -191,8 +203,6 @@
     "    'batch_size': [8, 16, 32, 64]\n",
     "}\n",
     "\n",
-    "# Set device\n",
-    "device = torch.device(\"cpu\")\n",
     "\n",
     "# Create a parameter grid\n",
     "grid = ParameterGrid(param_grid)\n",
@@ -210,10 +220,13 @@
     "        output_hidden_states = False,\n",
     "    )\n",
     "\n",
+    "    # Set device\n",
+    "    device = torch.device(\"cpu\")\n",
     "    model.to(device)\n",
     "\n",
     "    # Create a new optimizer with the current learning rate\n",
-    "    optimizer = AdamW(model.parameters(), lr=params['lr'])\n",
+    "    # FINE BUT NEED TO FOCUS ON LAYER\n",
+    "    optimizer = AdamW(model.classifier.parameters(), lr=params['lr'])\n",
     "    # Create the optimizer  \n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -253,10 +266,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = BertForSequenceClassification.from_pretrained(\n",
+    "        \"bert-base-uncased\",\n",
+    "        num_labels = 2,\n",
+    "        output_attentions = False,\n",
+    "        output_hidden_states = False,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object Module.parameters at 0x12f2b3d80>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.parameters()\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -496,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
