training on text model - horrible accuracy don't know why

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sinarollin/opt/anaconda3/envs/DLproj/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\celin\\anaconda3\\envs\\DLproj\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -160,30 +160,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train Loss: 0.7555,  ACC: 0.4875, F1-weighted: 0.3260\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+      "100%|██████████| 3/3 [00:05<00:00,  1.86s/it]"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eval Loss: 0.7706,  ACC: 0.4823, F1-weighted: 0.3243\n",
+      "[{'lr': 0.001, 'batch_size': 8, 'num_epochs': 5, 'eval_loss': 0.6760154730743833, 'eval_metrics': {'ACC': 0.5763888888888888, 'F1-weighted': 0.48718812052145377}}, {'lr': 0.0001, 'batch_size': 8, 'num_epochs': 5, 'eval_loss': 0.6894031266371409, 'eval_metrics': {'ACC': 0.4930555555555556, 'F1-weighted': 0.4703783870450537}}, {'lr': 1e-05, 'batch_size': 8, 'num_epochs': 5, 'eval_loss': 0.6800086895624796, 'eval_metrics': {'ACC': 0.5833333333333334, 'F1-weighted': 0.5553551386884721}}, {'lr': 0.001, 'batch_size': 16, 'num_epochs': 5, 'eval_loss': 0.6656811965836419, 'eval_metrics': {'ACC': 0.6125, 'F1-weighted': 0.5749322000095994}}, {'lr': 0.0001, 'batch_size': 16, 'num_epochs': 5, 'eval_loss': 0.6939746472570631, 'eval_metrics': {'ACC': 0.48888888888888893, 'F1-weighted': 0.3874986560280678}}, {'lr': 1e-05, 'batch_size': 16, 'num_epochs': 5, 'eval_loss': 0.6981043484475877, 'eval_metrics': {'ACC': 0.4652777777777778, 'F1-weighted': 0.44423443105073646}}, {'lr': 0.001, 'batch_size': 32, 'num_epochs': 5, 'eval_loss': 0.6837064146995544, 'eval_metrics': {'ACC': 0.55, 'F1-weighted': 0.46412552802614915}}, {'lr': 0.0001, 'batch_size': 32, 'num_epochs': 5, 'eval_loss': 0.6925610303878784, 'eval_metrics': {'ACC': 0.54375, 'F1-weighted': 0.5299606321107335}}, {'lr': 1e-05, 'batch_size': 32, 'num_epochs': 5, 'eval_loss': 0.697857403755188, 'eval_metrics': {'ACC': 0.47625, 'F1-weighted': 0.47099495907845057}}, {'lr': 0.001, 'batch_size': 64, 'num_epochs': 5, 'eval_loss': 0.681215504805247, 'eval_metrics': {'ACC': 0.5260416666666666, 'F1-weighted': 0.5008246092522822}}, {'lr': 0.0001, 'batch_size': 64, 'num_epochs': 5, 'eval_loss': 0.6913188497225443, 'eval_metrics': {'ACC': 0.5697916666666667, 'F1-weighted': 0.47629022072964206}}, {'lr': 1e-05, 'batch_size': 64, 'num_epochs': 5, 'eval_loss': 0.7705626686414083, 'eval_metrics': {'ACC': 0.4822916666666666, 'F1-weighted': 0.3242864155971667}}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
+    "torch.manual_seed(42)\n",
+    "    \n",
     "# Define the hyperparameters to tune\n",
     "param_grid = {\n",
     "    'lr': [1e-3, 1e-4, 1e-5],\n",
@@ -210,10 +222,13 @@
     "        output_hidden_states = False,\n",
     "    )\n",
     "\n",
+    "    for parameter in model.bert.parameters():\n",
+    "        parameter.requires_grad = False\n",
+    "\n",
     "    model.to(device)\n",
     "\n",
     "    # Create a new optimizer with the current learning rate\n",
-    "    optimizer = AdamW(model.parameters(), lr=params['lr'])\n",
+    "    optimizer = AdamW(model.classifier.parameters(), lr=params['lr'])\n",
     "    # Create the optimizer  \n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -232,6 +247,8 @@
     "\n",
     "    # Train and evaluate the model for the current number of epochs\n",
     "    for epoch in range(params['num_epochs']):\n",
+    "        print(f\"Epoch {epoch + 1}\")\n",
+    "        print('learning rate:', params['lr'], 'batch size:', params['batch_size'], 'num_epochs:', params['num_epochs'])\n",
     "        train_loss, train_metrics = train_epoch(model, optimizer, criterion, metrics, train_dataloader, device)\n",
     "        eval_loss, eval_metrics = evaluate(model, criterion, metrics, test_dataloader, device)\n",
     "\n",
@@ -496,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
