updates for functions -> audio model, not working yet but new functions for it

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -314,7 +314,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lr = 0.0001\n",
+    "batchsize = 8\n",
+    "epochs = 5"
+   ]
   },
   {
    "cell_type": "code",
